@@ -19,7 +19,7 @@
 	<div id="single-recipe" class="entry-content">
 		<h2 class="title-lined"><span class="recipe-prefix"><?php esc_html_e( 'Recipe:', 'lsx-health-plan' ); ?></span> <?php the_title(); ?></h2>
 		<div class="row">
-			<div class="col-md-6 recipe-image">
+			<div class="col-md-6 recipe-image lsx-shadow">
 				<?php
 				the_post_thumbnail( 'large', array(
 					'class' => 'aligncenter',
