@@ -1,10 +1,15 @@
 <?php
-$prep_time    = get_post_meta( get_the_ID(), 'recipe_prep_time', true );
-$cooking_time = get_post_meta( get_the_ID(), 'recipe_cooking_time', true );
-$serves       = get_post_meta( get_the_ID(), 'recipe_serves', true );
-$portion      = get_post_meta( get_the_ID(), 'recipe_portion', true );
+$prep_time     = get_post_meta( get_the_ID(), 'recipe_prep_time', true );
+$cooking_time  = get_post_meta( get_the_ID(), 'recipe_cooking_time', true );
+$serves        = get_post_meta( get_the_ID(), 'recipe_serves', true );
+$portion       = get_post_meta( get_the_ID(), 'recipe_portion', true );
+$energy        = get_post_meta( get_the_ID(), 'recipe_energy', true );
+$protein       = get_post_meta( get_the_ID(), 'recipe_protein', true );
+$carbohydrates = get_post_meta( get_the_ID(), 'recipe_carbohydrates', true );
+$fibre         = get_post_meta( get_the_ID(), 'recipe_fibre', true );
+$fat           = get_post_meta( get_the_ID(), 'recipe_fat', true );
 ?>
-<table class="recipe-table">
+<table class="recipe-table cooking-info-table">
 	<tbody>
 		<?php
 		if ( 1 >= (int) $serves ) {
@@ -58,6 +63,80 @@ $portion      = get_post_meta( get_the_ID(), 'recipe_portion', true );
 			<td>
 			<?php
 				echo wp_kses_post( $portion );
+			?>
+			</td>
+		</tr>
+		<?php
+		}
+		?>
+	</tbody>
+</table>
+<table class="recipe-table nutritional-info-table">
+	<tbody>
+		<?php
+		if ( ! empty( $energy ) ) {
+		?>
+		<tr class="energy">
+		<td><?php esc_html_e( 'Energy: ', 'lsx-health-plan' ); ?>&nbsp</td>
+			<td>
+			<?php
+				echo wp_kses_post( $energy );
+			?>
+			</td>
+		</tr>
+		<?php
+		}
+		?>
+		<?php
+		if ( ! empty( $protein ) ) {
+		?>
+		<tr class="protein">
+		<td><?php esc_html_e( 'Protein: ', 'lsx-health-plan' ); ?>&nbsp</td>
+			<td>
+			<?php
+				echo wp_kses_post( $protein );
+			?>
+			</td>
+		</tr>
+		<?php
+		}
+		?>
+		<?php
+		if ( ! empty( $carbohydrates ) ) {
+		?>
+		<tr class="carbohydrates">
+		<td><?php esc_html_e( 'Carbohydrates: ', 'lsx-health-plan' ); ?>&nbsp</td>
+			<td>
+			<?php
+				echo wp_kses_post( $carbohydrates );
+			?>
+			</td>
+		</tr>
+		<?php
+		}
+		?>
+		<?php
+		if ( ! empty( $fibre ) ) {
+		?>
+		<tr class="fibre">
+		<td><?php esc_html_e( 'Fibre: ', 'lsx-health-plan' ); ?>&nbsp</td>
+			<td>
+			<?php
+				echo wp_kses_post( $fibre );
+			?>
+			</td>
+		</tr>
+		<?php
+		}
+		?>
+		<?php
+		if ( ! empty( $fat ) ) {
+		?>
+		<tr class="fat">
+		<td><?php esc_html_e( 'Fat: ', 'lsx-health-plan' ); ?>&nbsp</td>
+			<td>
+			<?php
+				echo wp_kses_post( $fat );
 			?>
 			</td>
 		</tr>
