@@ -2,6 +2,9 @@
 
 ## [[1.3.2]](https://github.com/lightspeeddevelopment/lsx-health-plan/releases/tag/1.3.2) - Unreleased
 
+### Added
+- Extend the current single recipe post type to display additional fields.
+
 ### Fixed
 - Added in a statement to to check a video exists before outputting the video play button.
 
